--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ body {
   margin: 0;
   padding: 0;
 }
-/* ---------------  Header */
+/* ---------------  Header ----------*/
 
 .header {
   border: 1px solid #e7e9fc;
@@ -88,6 +88,10 @@ body {
   color: #4d5ae5;
 }
 
+.active {
+  position: relative;
+}
+
 .header-list-item1 {
   font-weight: 500;
   font-size: 16px;
@@ -95,6 +99,22 @@ body {
   letter-spacing: 0.02em;
   color: var(--main-title-color);
 }
+
+.active::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -145%;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
+}
+
+/* .header-list-item1:focus::after {
+  opacity: 1;
+} */
 
 .header-li-1 {
   margin-right: 40px;
@@ -169,7 +189,7 @@ body {
 
 /* /Header */
 
-/* ---------------------Portfolio */
+/* ------------------------Portfolio */
 
 /* ------Button list */
 
@@ -308,7 +328,7 @@ body {
 
 /* /Button list */
 
-/* ---------Portfolio Foto Section common */
+/* ---------Portfolio Foto Section ------ */
 
 .foto-section-h3 {
   font-weight: 500;
@@ -351,7 +371,39 @@ body {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-/* ---------//Portfolio Foto Section common */
+.overlay {
+  position: relative;
+}
+
+.overlay::before {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  opacity: 0;
+}
+
+.overlay:hover::before {
+  opacity: 0.7;
+}
+
+.overlay-description {
+  position: absolute;
+  width: 296px;
+  height: 96px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  background: #4d5ae5;
+  opacity: 0.5;
+  margin: 41px 32px 163px 32px;
+}
+
+/* ---//Portfolio Foto Section--- */
 
 /* -----------------------Web Studio ---*/
 
@@ -623,14 +675,6 @@ body {
   gap: 24px;
 }
 
-/* .customers-list-items {
-  display: flex;
-  width: 168px;
-  height: 88px;
-  justify-content: center;
-  align-items: center;
-} */
-
 .customers-items {
   width: 168px;
   height: 88px;
@@ -718,7 +762,6 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 16px;
-  /* margin-right: auto; */
   display: inline-block;
 }
 .footer-text {
@@ -728,7 +771,6 @@ body {
   color: #e7e9fc;
   letter-spacing: 0.02em;
   width: 264px;
-  /* margin-right: auto; */
 }
 
 .footer-social-text {
@@ -751,16 +793,6 @@ body {
   justify-content: center;
   gap: 16px;
 }
-
-/* .footer-icons {
-  display: flex;
-  width: 40px;
-  height: 40px;
-  background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 50%;
-  justify-content: center;
-  align-items: center;
-} */
 
 .footer-icon-1:hover,
 .footer-icon-1:focus {
