--- a/css/styles.css
+++ b/css/styles.css
@@ -373,9 +373,10 @@ body {
 
 .overlay {
   position: relative;
+  overflow: hidden;
 }
 
-.overlay::before {
+/* .overlay::before {
   content: "";
   position: absolute;
   display: inline-block;
@@ -383,14 +384,29 @@ body {
   height: 100%;
   background-color: #4d5ae5;
   opacity: 0;
-}
-
-.overlay:hover::before {
-  opacity: 0.7;
-}
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} */
 
 .overlay-description {
   position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #4d5ae5;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* opacity: 0.5; */
+  /* margin: 41px 32px 163px 32px; */
+}
+
+.overlay:hover .overlay-description {
+  opacity: 0.7;
+  transform: translateY(0);
+}
+
+.decsription-text {
   width: 296px;
   height: 96px;
   font-weight: 400;
@@ -398,9 +414,6 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  background: #4d5ae5;
-  opacity: 0.5;
-  margin: 41px 32px 163px 32px;
 }
 
 /* ---//Portfolio Foto Section--- */
