--- a/css/styles.css
+++ b/css/styles.css
@@ -112,10 +112,6 @@ body {
   border-radius: 2px;
 }
 
-/* .header-list-item1:focus::after {
-  opacity: 1;
-} */
-
 .header-li-1 {
   margin-right: 40px;
 }
@@ -376,18 +372,6 @@ body {
   overflow: hidden;
 }
 
-/* .overlay::before {
-  content: "";
-  position: absolute;
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-  background-color: #4d5ae5;
-  opacity: 0;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
-
 .overlay-description {
   position: absolute;
   top: 0;
@@ -397,12 +381,10 @@ body {
   background: #4d5ae5;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* opacity: 0.5; */
-  /* margin: 41px 32px 163px 32px; */
 }
 
 .overlay:hover .overlay-description {
-  opacity: 0.7;
+  opacity: 0.8;
   transform: translateY(0);
 }
 
@@ -414,6 +396,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  margin: 41px 32px 163px 32px;
 }
 
 /* ---//Portfolio Foto Section--- */
@@ -489,6 +472,41 @@ body {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+}
+
+.backdrop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 676px;
+  background-color: rgba(33, 33, 33, 0.2);
+}
+
+.backdrop.is-hidden {
+  /* opacity: 0.5; */
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  width: 408px;
+  height: 576px;
+  transform: translate(-50%, -50%);
+  background: #fcfcfc;
+  top: 374px;
+  left: 50%;
+  padding: 24px;
+}
+
+.modal-button {
+  width: 24px;
+  height: 24px;
+  background: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  /* margin-left: auto;
+  margin-right: 24px; */
 }
 
 /* /Hero Section */
@@ -787,7 +805,6 @@ body {
 }
 
 .footer-social-text {
-  /* width: 96px; */
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
