--- a/css/styles.css
+++ b/css/styles.css
@@ -481,10 +481,12 @@ body {
   width: 100%;
   height: 676px;
   background-color: rgba(33, 33, 33, 0.2);
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
-  /* opacity: 0.5; */
+  opacity: 0;
   pointer-events: none;
 }
 
@@ -500,11 +502,16 @@ body {
 }
 
 .modal-button {
+  position: absolute;
+  top: 24px;
+  right: 24px;
   width: 24px;
   height: 24px;
-  background: #e7e9fc;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
+  border: none;
+  background: none;
+  /* background: #e7e9fc; */
+  /* border: 1px solid rgba(0, 0, 0, 0.1); */
+  /* border-radius: 50%; */
   /* margin-left: auto;
   margin-right: 24px; */
 }
