--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--main-title-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .active::after {
@@ -127,6 +128,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--main-title-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-li-2 {
@@ -144,6 +146,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--main-title-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-list-item3:hover,
@@ -158,6 +161,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-mail:hover,
@@ -172,6 +176,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .adress-list1 {
@@ -187,7 +192,7 @@ body {
 
 /* ------------------------Portfolio */
 
-/* ------Button list */
+/* ------Button list-------- */
 
 .main-section-box {
   padding-top: 96px;
@@ -215,6 +220,7 @@ body {
   border-radius: 4px;
   border: 1px solid #e7e9fc;
   padding: 12px 24px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-item1:hover,
@@ -239,6 +245,7 @@ body {
   border: 1px solid #e7e9fc;
   border-radius: 4px;
   padding: 12px 24px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-item2:hover,
@@ -263,6 +270,7 @@ body {
   height: 48px;
   border: 1px solid #e7e9fc;
   border-radius: 4px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-item3:hover,
@@ -287,6 +295,7 @@ body {
   height: 48px;
   border: 1px solid #e7e9fc;
   border-radius: 4px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-item4:hover,
@@ -311,6 +320,7 @@ body {
   height: 48px;
   border: 1px solid #e7e9fc;
   border-radius: 4px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-item5:hover,
@@ -378,6 +388,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 41px 32px 163px 32px;
   background: #4d5ae5;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -389,14 +400,14 @@ body {
 }
 
 .decsription-text {
-  width: 296px;
+  width: auto;
   height: 96px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  margin: 41px 32px 163px 32px;
+  /* padding: 41px 32px 163px 32px; */
 }
 
 /* ---//Portfolio Foto Section--- */
@@ -461,6 +472,7 @@ body {
   display: inline-block;
   margin-left: auto;
   margin-right: auto;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -499,6 +511,7 @@ body {
   top: 374px;
   left: 50%;
   padding: 24px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-button {
@@ -511,9 +524,13 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   margin-left: auto;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  padding: 0;
 }
 
-.modal-button:hover {
+.modal-button:hover,
+.modal-button:focus {
   background: #404bbf;
   fill: #ffffff;
 }
@@ -521,6 +538,7 @@ body {
 .close-modal-icon {
   width: 8px;
   height: 8px;
+  margin: auto;
 }
 
 /* /Hero Section */
@@ -677,6 +695,7 @@ body {
   border-radius: 50%;
   justify-content: center;
   align-items: center;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-sections-svg {
@@ -729,6 +748,7 @@ body {
   justify-content: center;
   align-items: center;
   color: #8e8f99;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-items:hover,
@@ -851,6 +871,7 @@ body {
   border-radius: 50%;
   justify-content: center;
   align-items: center;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-svg {
