--- a/css/styles.css
+++ b/css/styles.css
@@ -190,228 +190,6 @@ body {
 
 /* /Header */
 
-/* ------------------------Portfolio */
-
-/* ------Button list-------- */
-
-.main-section-box {
-  padding-top: 96px;
-  padding-bottom: 120px;
-}
-
-.button-sections {
-  display: flex;
-  justify-content: center;
-  gap: 24px;
-  margin-bottom: 72px;
-}
-
-.button-item1 {
-  font-family: "Roboto";
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: var(--button-section-color);
-  background: #f4f4fd;
-  cursor: pointer;
-  width: 69px;
-  height: 48px;
-  border-radius: 4px;
-  border: 1px solid #e7e9fc;
-  padding: 12px 24px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button-item1:hover,
-.button-item1:focus {
-  color: #ffffff;
-  background: #404bbf;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border: #ffffff;
-}
-
-.button-item2 {
-  font-family: "Roboto";
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: var(--button-section-color);
-  background: #f4f4fd;
-  cursor: pointer;
-  height: 48px;
-  border: 1px solid #e7e9fc;
-  border-radius: 4px;
-  padding: 12px 24px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button-item2:hover,
-.button-item2:focus {
-  color: #ffffff;
-  background: #404bbf;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border: #ffffff;
-}
-
-.button-item3 {
-  font-family: "Roboto";
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: var(--button-section-color);
-  background: #f4f4fd;
-  cursor: pointer;
-  width: 78px;
-  height: 48px;
-  border: 1px solid #e7e9fc;
-  border-radius: 4px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button-item3:hover,
-.button-item3:focus {
-  color: #ffffff;
-  background: #404bbf;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border: #ffffff;
-}
-
-.button-item4 {
-  font-family: "Roboto";
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: var(--button-section-color);
-  background: #f4f4fd;
-  cursor: pointer;
-  width: 101px;
-  height: 48px;
-  border: 1px solid #e7e9fc;
-  border-radius: 4px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button-item4:hover,
-.button-item4:focus {
-  color: #ffffff;
-  background: #404bbf;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border: #ffffff;
-}
-
-.button-item5 {
-  font-family: "Roboto";
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: var(--button-section-color);
-  background: #f4f4fd;
-  cursor: pointer;
-  width: 126px;
-  height: 48px;
-  border: 1px solid #e7e9fc;
-  border-radius: 4px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button-item5:hover,
-.button-item5:focus {
-  color: #ffffff;
-  background: #404bbf;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border: #ffffff;
-}
-
-/* /Button list */
-
-/* ---------Portfolio Foto Section ------ */
-
-.foto-section-h3 {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--main-title-color);
-  margin-bottom: 8px;
-}
-
-.foto-section-text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--secondary-text-color);
-  margin: 0;
-}
-
-.foto-border {
-  background: #ffffff;
-  border-bottom: 1px solid #e7e9fc;
-  border-left: 1px solid #e7e9fc;
-  border-right: 1px solid #e7e9fc;
-}
-
-.foto-section {
-  display: flex;
-  flex-wrap: wrap;
-  row-gap: 48px;
-  column-gap: 24px;
-}
-
-.foto-item {
-  width: calc((100% - 48px) / 3);
-}
-
-.foto-item:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.overlay {
-  position: relative;
-  overflow: hidden;
-}
-
-.overlay-description {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 41px 32px 163px 32px;
-  background: #4d5ae5;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.overlay:hover .overlay-description {
-  opacity: 0.8;
-  transform: translateY(0);
-}
-
-.decsription-text {
-  width: auto;
-  height: 96px;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-  /* padding: 41px 32px 163px 32px; */
-}
-
-/* ---//Portfolio Foto Section--- */
-
 /* -----------------------Web Studio ---*/
 
 .main {
@@ -800,6 +578,232 @@ body {
 }
 
 /* /Section 4 */
+
+/* ------------------------Portfolio */
+
+/* ------Button list-------- */
+
+.main-section-box {
+  padding-top: 96px;
+  padding-bottom: 120px;
+}
+
+.button-sections {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-bottom: 72px;
+}
+
+.button-item1 {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--button-section-color);
+  background: #f4f4fd;
+  cursor: pointer;
+  width: 69px;
+  height: 48px;
+  border-radius: 4px;
+  border: 1px solid #e7e9fc;
+  padding: 12px 24px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-item1:hover,
+.button-item1:focus {
+  color: #ffffff;
+  background: #404bbf;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border: #ffffff;
+}
+
+.button-item2 {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--button-section-color);
+  background: #f4f4fd;
+  cursor: pointer;
+  height: 48px;
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
+  padding: 12px 24px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-item2:hover,
+.button-item2:focus {
+  color: #ffffff;
+  background: #404bbf;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border: #ffffff;
+}
+
+.button-item3 {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--button-section-color);
+  background: #f4f4fd;
+  cursor: pointer;
+  width: 78px;
+  height: 48px;
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-item3:hover,
+.button-item3:focus {
+  color: #ffffff;
+  background: #404bbf;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border: #ffffff;
+}
+
+.button-item4 {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--button-section-color);
+  background: #f4f4fd;
+  cursor: pointer;
+  width: 101px;
+  height: 48px;
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-item4:hover,
+.button-item4:focus {
+  color: #ffffff;
+  background: #404bbf;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border: #ffffff;
+}
+
+.button-item5 {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--button-section-color);
+  background: #f4f4fd;
+  cursor: pointer;
+  width: 126px;
+  height: 48px;
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-item5:hover,
+.button-item5:focus {
+  color: #ffffff;
+  background: #404bbf;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border: #ffffff;
+}
+
+/* /Button list */
+
+/* ---------Portfolio Foto Section ------ */
+
+.foto-section-h3 {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--main-title-color);
+  margin-bottom: 8px;
+}
+
+.foto-section-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+  margin: 0;
+}
+
+.foto-border {
+  background: #ffffff;
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+}
+
+.foto-section {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 48px;
+  column-gap: 24px;
+}
+
+.foto-item {
+  width: calc((100% - 48px) / 3);
+}
+
+.foto-section-link {
+  position: relative;
+}
+
+.foto-item:hover,
+.foto-item:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.overlay {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay-description {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 41px 32px 163px 32px;
+  background: #4d5ae5;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay:hover .overlay-description {
+  opacity: 0.8;
+  transform: translateY(0);
+}
+
+.decsription-text {
+  width: auto;
+  height: 96px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+}
+
+/* ---//Portfolio Foto Section--- */
 
 /* -------------------Footer */
 
