--- a/css/styles.css
+++ b/css/styles.css
@@ -763,10 +763,20 @@ body {
 
 .foto-section-link {
   position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
+/* .foto-section-link:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+} */
+
+/* <<----- box shadow working  */
 .foto-item:hover,
 .foto-item:focus {
+  /* transition-duration: 3000ms; */
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -788,7 +798,12 @@ body {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.overlay:hover .overlay-description {
+.foto-section-link:hover .overlay-description {
+  opacity: 0.8;
+  transform: translateY(0);
+}
+
+.foto-section-link:focus .overlay-description {
   opacity: 0.8;
   transform: translateY(0);
 }
