--- a/css/styles.css
+++ b/css/styles.css
@@ -762,24 +762,27 @@ body {
 }
 
 .foto-section-link {
+  display: block;
   position: relative;
   overflow: hidden;
   width: 100%;
   height: 100%;
 }
 
-/* .foto-section-link:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-} */
-
-/* <<----- box shadow working  */
-.foto-item:hover,
-.foto-item:focus {
-  /* transition-duration: 3000ms; */
+.foto-section-link:hover,
+.foto-section-link:focus {
+  transition-duration: 250ms;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
+/* <<----- box shadow working  */
+/* .foto-item:hover,
+.foto-item:focus {
+  /* transition-duration: 3000ms;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+} */
 
 .overlay {
   position: relative;
